Revision history for Perl extension IO::Pager.

0.32

	Undef $ENV{LESS} in interactive tests in case -E is set.

	Robustify t/11 for Win32 (RT#79950).

0.31    Sat Apr 06 2013

	Add missing IO::Handle fallback for ::Unbuffered (RT#82351)

	Bogus fix for Windoze automatic line-ending failure of t/11 (RT#79950),
	improvements welcomed.

0.30	Tue Sep 04 2012
	Implement feature request #78270 to include support say

	Preserve layers of passed hilehandle on instantiation.

	Fixed tests under Win32 & cygwin, bug #75181.

	Swap IO::Pager:new and ::open, alter subclass::open to
	remove unnecessary level of subroutine calls

	Return IO::Handle objects when not connected to a TTY for
	transparent use of IO::Pager when programming OO.
	NOTE: This is broken, see ::less in TODO

0.24	Sat Feb 18 2012 
	Fixed bug #74691, tests fail if CPANTS folk don't have a perl in PATH!

	Add PID method & token overload to access pager process identifier.

	Remove semi-circular reference in object to fix implicit close().

0.20	Sat Feb 11 2012

	Fixed bug #74691, add File::Which as dependency / skip test if missing

	Fixed non-TTY/redirection behavior and added corresponding test

	Improve buffering sistuation in both ::Buffered and ::Unbuffered

	Auto-gensym scalar filehandles like perl's open

	Add OO interface

	Add alternate pagers 'lv', 'pg',
	and system default '/etc/alternatives/pager' (bug# 74519)

	Add tests for initialization failure conditions (9-open.t)

0.16	Fri Feb 3 2012

	Require 5.8.0 or better

	Removed Perl warning 'Use of tie on a handle without * is deprecated'.

	No interactive questions during 'make test' (bug# 66718)

	Better handling of missing PAGER.

	Look for more pagers: 'most' and 'w3m' (bug# 74519)

	Documentation clean-up, light refactoring, more error checks.

	Do not run IO::Pager::Page automatically when in Perl compile mode.

0.10	Unreleased

	Added support for encodings via binmode() (bug# 67930).

	Test: encoding, handle (glob, scalar, OO), interactive...
