@@ -2,6 +2,12 @@ Revision history for Perl extension IO::Pager.
 
 0.32
 
+	Add 3-arg open support.
+
+	Add eof() mechanism for semi-elegant signal handling.
+
+	Update documentation.
+
 	Undef $ENV{LESS} in interactive tests in case -E is set.
 
 	Robustify t/11 for Win32 (RT#79950).
